--- a/springmvc/src/main/resources/application.properties
+++ b/springmvc/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# ?? ?? ?? ?? ( ?? info)
+logging.level.root=info
 
+#hello.springmvc ???? ? ?? ?? ?? ?? !
+#logging.level.hello.springmvc=trace
+# ?? ??? info, ?? ??? debug
+logging.level.hello.springmvc=debug
