--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 #logging.level.org.apache.coyote.http11=debug
 spring.messages.basename=messages,errors
+
+
+# session url x
+server.servlet.session.tracking-modes=cookie
+
+# session state
+server.servlet.session.timeout=60
