<Spring-mvc2> :  File upload시 httpServletRequest
multipart시 멀티파트 리졸버에서 MultipartHttpServletRequest 구현

--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# http message debug display
+logging.level.org.apache.coyote.http11=debug
 
+# enable multipart on(default)/off
+#spring.servlet.multipart.enabled=false
+
+## file size limit
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
