<Spring-mvc2> :  File upload and save

--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # http message debug display
-logging.level.org.apache.coyote.http11=debug
+#logging.level.org.apache.coyote.http11=debug
 
 # enable multipart on(default)/off
 #spring.servlet.multipart.enabled=false
@@ -7,3 +7,7 @@ logging.level.org.apache.coyote.http11=debug
 ## file size limit
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+# file image
+file.dir=C:/Users/Admin/Documents/SpringTest/
