--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # http message debug display
-#logging.level.org.apache.coyote.http11=debug
+logging.level.org.apache.coyote.http11=debug
 
 # enable multipart on(default)/off
 #spring.servlet.multipart.enabled=false
